cabal-version:   3.14
name:            haskell-playground
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Massimo Bortolato
maintainer:      massimo.bortolato@gmail.com

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable haskell-playground
  import:           warnings
  main-is:          Main.hs
  other-modules:
    ProducerConsumer
    ProducerConsumerChannel
    ProducerConsumerChannelLoad
    -- STM_Examples

  -- other-extensions:
  build-depends:
    , async
    , base        ^>=4.21.0.0
    , bytestring
    , stm
    , vector

  hs-source-dirs:   app
  default-language: GHC2024
  ghc-options:      -rtsopts -prof -fprof-auto
